<resources>
    <string name="app_name">SportGeek</string>
    <string name="title">SportGeek\nАвторизация</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="remember_data">Запомнить данные</string>
    <string name="enter">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="default_url">192.168.31.38</string>
</resources>