<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="@string/title" />

        <EditText
            android:layout_width="300dp"
            android:id="@+id/login"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:autofillHints="login" />

        <EditText
            android:layout_width="300dp"
            android:id="@+id/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gdl"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.14" />

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="10dp"
            android:text="@string/remember_data"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/gdl"
            app:layout_constraintTop_toBottomOf="@id/password" />


        <Button
            android:id="@+id/submit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            app:layout_constraintTop_toBottomOf="@id/remember"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/gdl"
            android:text="@string/enter"
            android:onClick="onSubmitClick" />

        <ImageView
            android:id="@+id/sittings"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="openSettings"
            android:contentDescription="" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/opback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="#Cf000000" />

    <ProgressBar
        android:id="@+id/progress"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:visibility="visible"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>